@@ -27,6 +27,7 @@ import net.dv8tion.jda.api.requests.restaction.MessageAction;
 import java.io.File;
 import java.util.*;
 import java.util.regex.Pattern;
+import java.util.stream.Collectors;
 
 public class GameChannel {
 	private final Set<String> channels = new HashSet<>();
@@ -40,14 +41,14 @@ public class GameChannel {
 		return channels.stream()
 				.map(ids -> ids.split(Pattern.quote("."))[0])
 				.map(id -> Main.getInfo().getGuildByID(id))
-				.toList();
+				.collect(Collectors.toList());
 	}
 
 	public List<TextChannel> getChannels() {
 		return channels.stream()
 				.map(ids -> ids.split(Pattern.quote(".")))
 				.map(ids -> Main.getInfo().getGuildByID(ids[0]).getTextChannelById(ids[1]))
-				.toList();
+				.collect(Collectors.toList());
 	}
 
 	public ClusterAction sendFile(File f) {
