@@ -30,6 +30,7 @@ import org.hibernate.annotations.OnDeleteAction;
 import javax.persistence.*;
 import java.awt.image.BufferedImage;
 import java.util.*;
+import java.util.stream.Collectors;
 
 @Entity
 @Table(name = "clan")
@@ -153,7 +154,7 @@ public class Clan {
 	public List<ClanMember> getFromHierarchy(ClanHierarchy ch) {
 		return members.stream()
 				.filter(cm -> cm.getRole() == ch)
-				.toList();
+				.collect(Collectors.toList());
 	}
 
 	public void transfer() {
